# appointments

./: Cargo.toml  README.md  build.rs
migrations/initial_schema/: down.sql  up.sql
proto/: appointments.proto
src/: appointments-server.rs  giver.rs  lib.rs  model.rs  schema.rs  utils.rs
