[package]
name = "appointments"
version = "0.1.0"
authors = ["morgan <a@morganrhil.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
name="appointments"
path="./src/lib.rs"

[[bin]]
name="appointments-giver"
path="./src/bin/appointments-giver.rs"

[[bin]]
name="appointments-giver-tests"
path="./src/bin/appointments-giver-tests.rs"

[[bin]]
name="populate-example-data"
path="./src/bin/populate-example-data.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuidv07"] }
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.4" 
